# docmanager

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
api/: main.py
api/core/: config.py  db.py
api/interfaces/: __init__.py  doc.py
api/middleware/: __init__.py  handler.py
api/models/: __init__.py  base.py  doc.py  enum.py
api/routes/: __init__.py  doc.py
api/services/: __init__.py  base.py  doc.py
api/utils/: deps.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/Components/SkeletonLoading/: Skeleton.tsx
frontend/src/Components/Thumbnail/: Thumbnail.tsx
frontend/src/Pages/Base/: App.tsx
frontend/src/Pages/DndBoard/: Page.tsx
frontend/src/Pages/Page404/: Page.tsx
frontend/src/static/css/: 404.module.css
