[tool.poetry]
name = "docmanager"
version = "0.1.0"
description = ""
authors = ["Muthu Kumaran R <rsmuthu@duck.com>"]
package-mode = false
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
pydantic = "^2.9.2"
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.0"
sqlmodel = "^0.0.22"
fastapi = {version = "^0.115.4", extras = ["standard"]}
asyncpg = "^0.30.0"
uuid7 = "^0.1.0"
greenlet = "^3.1.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"

[tool.ruff]
line-length = 120
select = ["E", "F", "W"]
ignore = ["E501"]
exclude = ["migrations", "tests"]
target-version = "py313"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
